# proj

./: items_view.py  main.py  pyproject.toml
core/models/: __init__.py  base.py  db_helper.py
