[tool.poetry]
name = "proj"
version = "0.1.0"
description = ""
authors = ["Kargo <kargozaurus@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.3"
pydentic = "^0.0.1.dev3"
psycopg2 = "^2.9.9"
uvicorn = {extras = ["standart"], version = "^0.29.0"}
pydantic = {extras = ["email"], version = "^2.7.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
